@@ -1,3 +1,7 @@
+2023-01-11  Frank Ch. Eigler  <fche@redhat.com>
+
+	* debuginfod.8: Tweak -c/-C documentation for heuristic defaults.
+
 2022-10-31  Aaron Merey  <amerey@redhat.com>
 
 	* Makefile.am (notrans_dist_man3_MANS): Add debuginfod_find_section.3.
