@@ -1,3 +1,7 @@
+2023-01-11  Frank Ch. Eigler  <fche@redhat.com>
+
+	* configure.ac: Add some rlimit/affinity checks.
+
 2022-11-02  Mark Wielaard  <mark@klomp.org>
 
 	* configure.ac (AC_INIT): Set version to 0.188.
